crates/lexing/tests/snapshots/lexer__block_comment.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    BLOCK_COMMENT,
    WHITESPACE,
    BLOCK_COMMENT,
    END_OF_FILE,
]
