crates/lexing/tests/snapshots/lexer__character.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    CHAR,
    END_OF_FILE,
]
