crates/lexing/tests/snapshots/lexer__character_escape.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    CHAR,
    WHITESPACE,
    CHAR,
    WHITESPACE,
    CHAR,
    WHITESPACE,
    CHAR,
    WHITESPACE,
    CHAR,
    WHITESPACE,
    CHAR,
    WHITESPACE,
    CHAR,
    END_OF_FILE,
]
