crates/lexing/tests/snapshots/lexer__double_period_operator_name.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    DOUBLE_PERIOD,
    WHITESPACE,
    DOUBLE_PERIOD_OPERATOR_NAME,
    END_OF_FILE,
]
