crates/lexing/tests/snapshots/lexer__end_of_file.snap
---
source: crates/lexing/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
[
    END_OF_FILE,
]
