crates/lexing/tests/snapshots/lexer__end_of_file_annotation.snap
---
source: crates/lexing/tests/lexer.rs
description: "-- Hola!\n\n{- Hello! -}\n"
expression: snapshot
snapshot_kind: text
---
annotation : "-- Hola!\n\n{- Hello! -}\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 4, column: 1 }
     error : None
